<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/joinnow_view">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/joinnow_personal_info_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/personal_info_title"
            android:textSize="30sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/joinnow_first_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:hint="@string/first_name_hint"
            android:autofillHints="@string/autofill_hint_firstname"
            android:textColor="@color/edit_text_grey"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/joinnow_personal_info_text" />

        <EditText
            android:id="@+id/joinnow_last_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:hint="@string/last_name_hint"
            android:autofillHints="@string/autofill_hint_lastname"
            android:textColor="@color/edit_text_grey"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/joinnow_first_name_edit_text" />

        <TextView
            android:id="@+id/joinnow_security_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toBottomOf="@id/joinnow_last_name_edit_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/security_title"
            android:textSize="30sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/joinnow_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/autofill_hint_email"
            android:hint="@string/email_hint"
            android:textColor="@color/edit_text_grey"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/joinnow_security_text" />

        <EditText
            android:id="@+id/joinnow_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:autofillHints="@string/autofill_hint_password"
            android:textColor="@color/edit_text_grey"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/joinnow_email_edit_text" />

        <TextView
            android:id="@+id/joinnow_have_gift_card_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/joinnow_password_edit_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/have_gift_card_label"
            android:textSize="20sp"
            android:textColor="@color/starbucksGreen"/>

        <TextView
            android:id="@+id/joinnow_gift_card_info_tag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@id/joinnow_have_gift_card_text_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/gift_card_info_label"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/joinnow_preferences_terms_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/joinnow_gift_card_info_tag"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/preference_terms_title"
            android:textSize="30sp"
            android:textColor="@color/black"/>

        <CheckBox
            android:id="@+id/joinnow_checkbox1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            app:layout_constraintTop_toBottomOf="@id/joinnow_preferences_terms_text_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/preference_terms_label1"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <CheckBox
            android:id="@+id/joinnow_checkbox2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            app:layout_constraintTop_toBottomOf="@id/joinnow_checkbox1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/preference_terms_label2"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/joinnow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_now_label"
            android:background="@color/starbucksGreen"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/joinnow_checkbox2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="30dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>